MYCE-47 refactor: 회원 탈퇴 기능 추가 수정 (#236)
* Create sync-to-jira.yml

깃허브 액션을 통해서 깃허브 이슈 생성 시 자동으로 지라 이슈 생성

* Update and rename sync-to-jira.yml to create-jira-issue.yml

yml 파일 수정

* Update create-jira-issue.yml

project key 값

* Create gradle.yml

* Update gradle.yml

* Update gradle.yml

* Update and rename gradle.yml to main.yml

* Update main.yml

* Update main.yml

* Update main.yml

* Update and rename main.yml to ci.yml

jacoco 테스트 커버리지 리포트를 별도로 업로드
cache: 'gradle' 사용
테스트와 빌드를 명시적으로 분리

* Update ci.yml

프로젝트명 명시적 설정

* Update ci.yml

 Gradle Clean 추가

* Update settings.gradle

shopChat -> feedShop

* MYCE-46 myPage Badge, point, coupon 파일 생성'

* ci.yml 충돌 해결;

* MYCE-46 myPage Badge, point, coupon 파일 생성'

* MYCE-15 feat: 이메일 인증을 통한 회원가입 기능 구현

* MYCE-15 test: 회원가입 및 이메일 인증 로직에 맞춘 UserServiceTest 리팩토링 및 케이스 추가

* 불필요 라이브러리 제거;

* CI 관련 설정 재추가;

* CI test오류 발생 부분 수정

* MYCE-15 refactor: SonarCube CodeCoverage 측정 보완

* 회원 탈퇴 기능 구현

* 회원 탈퇴 기능 구현

* 회원 탈퇴 UserServiceTest 수정

* SwaggerConfig 추가'

* 회원 탈퇴 기능 추가 수정

* Update ci.yml