@@ -16,13 +16,14 @@ import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.authentication.HttpStatusEntryPoint; // <-- 추가
+import org.springframework.security.web.authentication.HttpStatusEntryPoint;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.http.HttpStatus; // <-- 추가
+import org.springframework.http.HttpStatus;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -49,12 +50,20 @@ public class SecurityConfig {
                 )
 
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/auth/login", "/api/auth/signup", "/public/**",
-                                "/swagger-ui/**", "/v3/api-docs/**", "/swagger-resources/**",
-                                "/api/products", "/api/products/**").permitAll()
-                        .requestMatchers("/api/seller/**").hasRole("SELLER")
-
-                        .anyRequest().authenticated()
+                    .requestMatchers(
+                      "/api/auth/login",
+                      "/api/auth/signup",
+                      "/api/auth/verify-email", // develop 브랜치에 있던 내용
+                      "/public/**",
+                      "/swagger-ui/**",
+                      "/v3/api-docs/**",
+                      "/swagger-resources/**",
+                      "/api/products", // 현재 브랜치에 있던 내용
+                      "/api/products/**" // 현재 브랜치에 있던 내용
+                    ).permitAll()
+                    .requestMatchers("/api/users/admin/**").hasRole("ADMIN")
+                    .requestMatchers("/api/seller/**").hasRole("SELLER")
+                    .anyRequest().authenticated()
                 )
                 // 폼 로그인 및 HTTP Basic 인증은 사용하지 않음
                 .formLogin(formLogin -> formLogin.disable())
@@ -67,11 +76,13 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:3000"));
+        config.setAllowedOrigins(Arrays.asList(
+                "https://feedshop-frontend.vercel.app/", // 프론트엔드 실제 배포 주소
+                "http://localhost:3000"
+        ));
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
-
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
         return source;
